--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/naff.js"></script>
-    <script jm-name="global-css">include('modules/global-css.html', 'global-css')</script>    
+    <script nf-name="global-css">include('modules/global-css.html', 'global-css')</script>    
 </head>
 
 <body>
-    <script jm-name="header">include('modules/header.html', 'header', [400])</script>
-    <script jm-name="homepage-hero">include('modules/homepage-hero.html', 'homepage-hero')</script>
-    <script jm-name="homepage-about">include('modules/homepage-about.html', 'homepage-about')</script>
-    <script jm-lazy jm-name="footer">include('modules/footer.html', 'footer')</script>
+    <script nf-name="header">include('modules/header.html', 'header', [400])</script>
+    <script nf-name="homepage-hero">include('modules/homepage-hero.html', 'homepage-hero')</script>
+    <script nf-name="homepage-about">include('modules/homepage-about.html', 'homepage-about')</script>
+    <script nf-lazy nf-name="footer">include('modules/footer.html', 'footer')</script>
 </body>
 </html>
