--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/naff.js"></script>
-    <script nf-name="global-css">include('modules/global-css.html', 'global-css')</script>    
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="js/naff.js"></script>
+	<script nf-name="global-css">include('modules/global-css.html', 'global-css')</script>    
 </head>
 
 <body>
-    <script nf-name="header">include('modules/header.html', 'header', [400])</script>
-    <script nf-name="homepage-hero">include('modules/homepage-hero.html', 'homepage-hero')</script>
-    <script nf-name="homepage-about">include('modules/homepage-about.html', 'homepage-about')</script>
-    <script nf-lazy nf-name="footer">include('modules/footer.html', 'footer')</script>
+	<script nf-name="header">include('modules/header/header.html', 'header', [400])</script>
+	<script nf-name="homepage-hero">include('modules/homepage/hero.html', 'homepage-hero')</script>
+	<script nf-name="homepage-about">include('modules/homepage/about.html', 'homepage-about')</script>
+	<script nf-lazy nf-name="footer">include('modules/footer/footer.html', 'footer')</script>
 </body>
 </html>
