--- a/src/modules/header/header.400.html
+++ b/src/modules/header/header.400.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="modules/header/header.css">
+<link rel="stylesheet" type="text/css" href="modules/header/header.400.css">
 <nav class="main">
     <img src="images/logo.png" >
     <ul>
