--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<script nf-name="header">include('modules/header/header.html', 'header', [400])</script>
+	<script nf-name="header">include('modules/header/header.html', 'header', ["(mob)400", "400()"])</script>
 	<script nf-name="homepage-hero">include('modules/homepage/hero.html', 'homepage-hero')</script>
 	<script nf-name="homepage-about">include('modules/homepage/about.html', 'homepage-about')</script>
 	<script nf-lazy nf-name="footer">include('modules/footer/footer.html', 'footer')</script>
