updates naff.js to return if a module is not in a breakpoint

--- a/src/modules/header/hamburger.html
+++ b/src/modules/header/hamburger.html
@@ -7,3 +7,9 @@
   <span></span>
   <span></span>
 </button>
+
+<script>
+document.querySelector(".hmbrgr").addEventListener("click", function(e) {
+    this.classList.toggle("open");
+});
+</script>
