--- a/src/modules/header/header.html
+++ b/src/modules/header/header.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="modules/header/header.css">
 <nav class="main">
     <img src="images/logo.png" >
-    <script nf-name="hamburger">include('modules/header/hamburger.html', 'hamburger', [400])</script>
+    <script nf-name="hamburger">include('modules/header/hamburger.html', 'hamburger', ["()400"])</script>
     <ul>
         <li><a href="/">home</a></li>
         <li><a href="contact">contact</a></li>
