adds stuff and prod build for netlify

--- a/src/modules/header/header.html
+++ b/src/modules/header/header.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="modules/header/header.css">
 <nav class="main">
-    <img src="images/logo.png" >
+    <img src="images/naff-logo.png" >
     <script nf-name="hamburger">include('modules/header/hamburger.html', 'hamburger', ["()400"])</script>
     <ul>
         <li><a href="/">home</a></li>
