--- a/src/modules/homepage/hero.html
+++ b/src/modules/homepage/hero.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="modules/homepage/hero.css">
 
 <div class="homepage-hero">
-	<h1><span>N</span><span>A</span><span>F</span><span>F</span></h1>
-	<p>Not Another Frontend Framework</p>	
+	<h1><span>M</span></h1>
+	<p>A zero-hour lerning frontend framework</p>
 </div>
