add google search console stuff

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="js/naff.js"></script>
 	<script nf-name="global-head">include('modules/global-head.html', 'global-head')</script>
+	<script nf-name="homepage-meta">include('modules/homepage/homepage-meta.html', 'homepage-meta')</script>
 </head>
 
 <body>
