--- a/src/modules/homepage/hero.html
+++ b/src/modules/homepage/hero.html
@@ -2,5 +2,5 @@
 
 <div class="homepage-hero">
 	<h1><span>M</span></h1>
-	<p>A zero-hour lerning frontend framework</p>
+	<p><strong>Modulr:</strong> A zero-hour learning frontend framework, like Angular or React, but simple!</p>
 </div>
