removes homepage-about

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
 	<script nf-name="header">include('modules/header/header.html', 'header')</script>
 	<script nf-name="homepage-hero">include('modules/homepage/hero.html', 'homepage-hero')</script>
-	<script nf-lazy nf-name="homepage-about">include('modules/homepage/about.html', 'homepage-about')</script>
+	<!-- <script nf-lazy nf-name="homepage-about">include('modules/homepage/about.html', 'homepage-about')</script> -->
 	<script nf-lazy nf-name="footer">include('modules/footer/footer.html', 'footer')</script>
 </body>
 </html>
