--- a/src/modules/header/header.html
+++ b/src/modules/header/header.html
@@ -1,11 +1,9 @@
 <link rel="stylesheet" type="text/css" href="modules/header/header.css">
 <nav class="main">
-    <img src="images/modulr-logo.png" >
-    <script nf-name="hamburger">include('modules/header/hamburger.html', 'hamburger', ["()440"])</script>
+    <img src="images/M.svg" >
+    <script M-name="hamburger">include('modules/header/hamburger.html', 'hamburger', ["()440"])</script>
     <ul>
         <li><a href="/">home</a></li>
-        <li><a href="contact">contact</a></li>
-        <li><a href="about">about</a></li>
-        <li><a href="blog">blog</a></li>
+        <li><a href="tldr">tl;dr</a></li>
     </ul>
 </nav>
