--- a/src/tldr.html
+++ b/src/tldr.html
@@ -6,13 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="js/modulr.js"></script>
 	<script M-name="global-head">include('modules/global-head.html', 'global-head')</script>
-	<script M-name="homepage-meta">include('modules/homepage/homepage-meta.html', 'homepage-meta')</script>
+	<script M-name="tldr-meta">include('modules/tldr/tldr-meta.html', 'tldr-meta')</script>
 </head>
 
 <body>
 	<script M-name="header">include('modules/header/header.html', 'header')</script>
-	<script M-name="homepage-hero">include('modules/homepage/hero.html', 'homepage-hero')</script>
-	<!-- <script M-lazy M-name="homepage-about">include('modules/homepage/about.html', 'homepage-about')</script> -->
+	
 	<script M-lazy M-name="footer">include('modules/footer/footer.html', 'footer')</script>
 </body>
 </html>
