--- a/src/modules/global-head.html
+++ b/src/modules/global-head.html
@@ -2,7 +2,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
 <link rel="manifest" href="icons/site.webmanifest">
-<link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#150593">
+<link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#2d89ef">
 <link rel="shortcut icon" href="icons/favicon.ico">
 <meta name="msapplication-TileColor" content="#2d89ef">
 <meta name="msapplication-config" content="icons/browserconfig.xml">
