--- a/src/modules/homepage/hero.html
+++ b/src/modules/homepage/hero.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="modules/homepage/hero.css">
 
 <div class="homepage-hero">
-	<h1><span>M</span></h1>
-	<p><strong>Modulr:</strong> A zero-hour learning frontend framework, like Angular or React, but simple!</p>
+	<img src="images/M.svg">
+	<p><strong>Modulr:</strong> A zero-hour frontend framework, create fast, efficient, modular webpages with no learning curve</p>
 </div>
