adds tldr stuff and highlight.js

--- a/src/modules/homepage/hero.html
+++ b/src/modules/homepage/hero.html
@@ -2,5 +2,5 @@
 
 <div class="homepage-hero">
 	<img src="images/M.svg">
-	<p><strong>Modulr:</strong> A zero-hour frontend framework, create fast, efficient, modular webpages with no learning curve</p>
+	<p><strong>Modulr:</strong> A zero-hour frontend framework.<br>Create fast, efficient, modular webpages with no learning curve</p>
 </div>
