--- a/src/modules/homepage/homepage-meta.html
+++ b/src/modules/homepage/homepage-meta.html
@@ -1,2 +1,2 @@
 <title>Modulr &middot; Home</title>
-<meta name="description" content="Modulr: A zero-hour frontend framework, create fast, efficient, modular webpages with zero learning curve">
+<meta name="description" content="Modulr: A zero-hour frontend framework, create fast, efficient, modular webpages with no learning curve">
