--- a/src/tldr.html
+++ b/src/tldr.html
@@ -11,7 +11,7 @@
 
 <body>
 	<script M-name="header">include('modules/header/header.html', 'header')</script>
-	
+	<script M-name="tldr">include('modules/tldr/tldr.html', 'tldr')</script>
 	<script M-lazy M-name="footer">include('modules/footer/footer.html', 'footer')</script>
 </body>
 </html>
