--- a/src/modules/footer/footer.html
+++ b/src/modules/footer/footer.html
@@ -7,3 +7,9 @@
 		<a href="https://twitter.com"><img src="images/Twitter_Bird.svg"></a>
 	</div>
 </div>
+<style>
+	html{
+		transition: all 0.3s;
+		opacity: 1!important;
+	}
+</style>
