--- a/src/modules/header/header.html
+++ b/src/modules/header/header.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" type="text/css" href="modules/header/header.css">
+<!-- <link rel="stylesheet" type="text/css" href="modules/header/header.css"> -->
+<style>nav.main{display:flex;align-items:center;justify-content:space-between;padding:1rem}nav.main img{width:3rem}nav.main ul{display:flex;justify-content:flex-end;list-style-type:none;padding:0;margin:0}nav.main ul li{padding:0 1rem;border-right:2px solid #000}nav.main ul li:last-child{border-right:0}nav.main ul li a{color:#000;font-weight:700;text-decoration:none;text-transform:uppercase}</style>
 <nav class="main">
     <img src="images/M.svg" >
     <script M-name="hamburger">include('modules/header/hamburger.html', 'hamburger', ["()440"])</script>
