--- a/src/blog-2.html
+++ b/src/blog-2.html
@@ -10,6 +10,7 @@
 
 <body>
 	<script M-name="header">include('modules/header/header.html', 'header')</script>
+	<script M-name="homepage-hero">include('modules/homepage/hero.html', 'homepage-hero')</script>
 	<script M-name="blog-2" M-temp >include('modules/blog/blog-2.html', 'blog-2')</script>
 	<script M-lazy M-name="footer">include('modules/footer/footer.html', 'footer')</script>
 </body>
