--- a/src/modules/header/header.html
+++ b/src/modules/header/header.html
@@ -7,5 +7,9 @@
         <li><a href="tldr">tl;dr</a></li>
         <li><a href="blog">blog</a></li>
         <li><a href="blog-2">lazy blog</a></li>
+        <li><a href="http://olado.github.io/doT/index.html">doT.js</a></li>
+        <li><a href="" onclick="localStorage.setItem('language', 'en')">EN</a></li>
+        <li><a href="" onclick="localStorage.setItem('language', 'sv')">SV</a></li>
+        <li><a href="" onclick="localStorage.setItem('language', 'fi')">FI</a></li>
     </ul>
 </nav>
